<resources>
    <string name="app_name">BotonDePanico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login_title">Iniciar Sesión</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="txt_sos">SOS</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="are_u_ok">¿NECESITAS AYUDA?</string>
    <string name="txt_si">SI</string>
    <string name="txt_no">NO</string>

    <string name="tool_bar_login">Iniciar Sesión</string>
    <string name="tool_bar_register">Registrarse</string>
</resources>