<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/logInFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.projects.botondepanico.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.projects.botondepanico.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.projects.botondepanico.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.projects.botondepanico.AlertFragment"
        android:label="fragment_alert"
        tools:layout="@layout/fragment_alert" >
        <action
            android:id="@+id/action_alertFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit" />
    </fragment>
    <fragment
        android:id="@+id/logInFragment"
        android:name="com.projects.botondepanico.auth.LogInFragment"
        android:label="fragment_log_in"
        tools:layout="@layout/fragment_log_in" >
        <action
            android:id="@+id/action_logInFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>