<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_alert"
    android:orientation="vertical"
    tools:context=".AlertFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_u_ok"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="100sp"
            android:layout_gravity="center"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
                <Button
                    android:id="@+id/btnSOS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/btn_square_yes"
                    android:text="@string/txt_si"
                    android:textColor="#FFFFFF"
                    android:textSize="100sp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/btnNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_square_no"
                android:text="@string/txt_no"
                android:textColor="#FFFFFF"
                android:textSize="100sp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>